crates/fortitude_linter/src/rules/obsolescent/snapshots/fortitude_linter__rules__obsolescent__tests__entry-statement_OB021.f90.snap
---
source: crates/fortitude_linter/src/rules/obsolescent/mod.rs
expression: diagnostics
---
./resources/test/fixtures/obsolescent/OB021.f90:7:8: OB021 entry statements are obsolescent, use module procedures with generic interface
  |
5 |        RETURN
6 |
7 |        ENTRY SUB2(A, B, C)
  |        ------------------- OB021
8 |        RETURN
  |

./resources/test/fixtures/obsolescent/OB021.f90:10:8: OB021 entry statements are obsolescent, use module procedures with generic interface
   |
 8 |        RETURN
 9 |
10 |        ENTRY SUB3
   |        ---------- OB021
11 |        RETURN
12 |        END
   |
