crates/fortitude_linter/src/rules/obsolescent/snapshots/fortitude_linter__rules__obsolescent__tests__equivalence-statement_OB012.f90.snap
---
source: crates/fortitude_linter/src/rules/obsolescent/mod.rs
expression: diagnostics
snapshot_kind: text
---
OB012 `equivalence` is obsolete and should not be used
 --> ./resources/test/fixtures/obsolescent/OB012.f90:4:3
  |
2 |   DOUBLE PRECISION DVAR
3 |   INTEGER(KIND=2) IARR(4)
4 |   EQUIVALENCE(DVAR, IARR(1))
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
5 | END PROGRAM test
  |
